<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TjpuActivity!</string>
    <string name="app_name">天津工大助手</string>
    <string name="username">学号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="bxqcjcx">本学期成绩</string>
    <string name="bxqkb">本学期课表</string>
    <string name="xlcx">校历查询</string>
    <string name="sorry">此功能尚未开放，敬请期待！</string>
    <string name="test">测试</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="search">查询</string>
    <string name="Tipstxt1">1. 此版本为民间版本</string>
    <string name="Tips1">贴心小提醒</string>
    <string name="keys">请输入关键字</string>
    <string name="text_no_book">没有结果，请重试</string>
    <string name="bookName">名称</string>
    <string name="bookAuthor">作者</string>
    <string name="bookStatus">状态</string>
    <string name="bookNum">编号</string>
    <string name="bookType">文献类型</string>
    <string name="bookLoc">馆藏位置</string>
    <string name="bookIsbn">ISBN</string>
    <string name="bookC">出版社</string>
    
    

</resources>