<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      	android:text="@string/bookName"
         />
    <TextView 
        android:id="@+id/bookTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFff99"
         />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      	android:text="@string/bookAuthor"
         />
    <TextView 
        android:id="@+id/bookAuthor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFff99"
         />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      	android:text="@string/bookStatus"
         />
    <TextView 
        android:id="@+id/bookStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFff99"
         />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      	android:text="@string/bookNum"
         />
    <TextView 
        android:id="@+id/bookNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFff99"
         />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      	android:text="@string/bookType"
      	/>
    <TextView 
        android:id="@+id/bookType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFff99"
         />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      	android:text="@string/bookLoc"
      	/>
    <TextView 
        android:id="@+id/bookLoc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFff99"
         />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      	android:text="@string/bookIsbn"
      	/>
    <TextView 
        android:id="@+id/bookIsbn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFff99"
         />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      	android:text="@string/bookC"
      	/>
    <TextView 
        android:id="@+id/bookChubanshe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFff99"
         />
    
    
   
    

</LinearLayout>