<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    
    <Button android:id="@+id/bxqcjcx" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="@string/bxqcjcx"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
             />
    
    <Button android:id="@+id/bxqkb" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="@string/bxqkb"
            android:textSize="20dp" />
    
    <Button android:id="@+id/xlcx" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="@string/xlcx"
            android:textSize="20dp" />
	
</LinearLayout>